load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# Указываем prefix для Gazelle
gazelle(
    name = "gazelle",
    prefix = "github.com/AlekseyPromet/masscan",  # Замените на ваш путь модуля
)

# Основной бинарный файл
go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)

# Библиотека с исходным кодом
go_library(
    name = "app_lib",
    srcs = ["main.go"],  # Укажите ваши исходные файлы
    importpath = "github.com/AlekseyPromet/masscan",
    visibility = ["//visibility:private"],
    deps = [
        # Укажите зависимости, если они есть
        # "//internal:internal_lib",
    ],
)